<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="false"
    android:orientation="vertical"
    android:visibility="visible">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:contentPadding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?attr/dividerHorizontal"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:showDividers="end">

                <ImageView
                    android:id="@+id/avatarMarkingItem"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_user"
                    tools:ignore="VectorDrawableCompat" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:divider="?attr/dividerHorizontal"
                    android:orientation="vertical"
                    android:showDividers="end">

                    <TextView
                        android:id="@+id/txtMarkingItemName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:singleLine="false"
                        android:text="@string/student_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textColor="@color/black"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/txtMarkingItemID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/student_id"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/AttendanceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/txtAttendance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marking_attendance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/checkBoxAttendance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/CheckpointLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/checkpoint1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_check_point1" />

                <CheckBox
                    android:id="@+id/checkpoint2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/txt_check_point2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ScoreOutOfLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:focusableInTouchMode="false"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtMarkingScore"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="0.0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/editTextMarkingScore"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="end"
                        android:hint="Score"
                        android:inputType="numberDecimal"
                        android:maxLength="4"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/black"
                        android:visibility="gone" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="/"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/txtScoreOutOfX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="100"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/btnUpdateScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Update" />

                <Button
                    android:id="@+id/btnSaveScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Save"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/GradeHDLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <RadioGroup
                    android:id="@+id/btnGroupHD"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/btnHDP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="HD+" />

                    <RadioButton
                        android:id="@+id/btnHD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="HD" />

                    <RadioButton
                        android:id="@+id/btnDN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="DN" />

                    <RadioButton
                        android:id="@+id/btnCR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="CR" />

                    <RadioButton
                        android:id="@+id/btnPP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="PP" />

                    <RadioButton
                        android:id="@+id/btnNN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="NN" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/GradeALinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <RadioGroup
                    android:id="@+id/btnGroupA"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/btnA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="A" />

                    <RadioButton
                        android:id="@+id/btnB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:text="B" />

                    <RadioButton
                        android:id="@+id/btnC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:text="C" />

                    <RadioButton
                        android:id="@+id/btnD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:text="D" />

                    <RadioButton
                        android:id="@+id/btnF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:text="F" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>